記事ごとにフォルダ別に整理

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,11 +8,11 @@ website:
       - text: "Home"
         href: index.qmd
       - text: "教育測定"
-        href: irt_index.qmd
+        href: IRT/irt_index.qmd
       - text: "社会調査"
-        href: survey_index.qmd
+        href: SURVEY/survey_index.qmd
       - text: "情報機器"
-        href: ict_index.qmd
+        href: ICT/ict_index.qmd
 
   sidebar:
     style: "docked"
@@ -21,19 +21,19 @@ website:
       - text: "Home"
         href: index.qmd
       - section: "教育測定"
-        href: irt_index.qmd
+        href: IRT/irt_index.qmd
         contents:
-          - irt_2pl.qmd
-          - irt_mirt.qmd
-          - irt_tam.qmd
-          - irt_measurement_error.qmd
+          - IRT/irt_2pl.qmd
+          - IRT/irt_mirt.qmd
+          - IRT/irt_tam.qmd
+          - IRT/irt_measurement_error.qmd
       - section: "社会調査"
-        href: survey_index.qmd
+        href: SURVEY/survey_index.qmd
         contents:
-          - survey_weight.qmd
-          - survey_benzecris.qmd
+          - SURVEY/survey_weight.qmd
+          - SURVEY/survey_benzecris.qmd
       - section: "情報機器"
-        href: ict_index.qmd
+        href: ICT/ict_index.qmd
         contents:
 
 
