--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,6 +30,7 @@ website:
       - section: "社会調査"
         href: SURVEY/survey_index.qmd
         contents:
+          - SURVEY/survey_survey.qmd
           - SURVEY/survey_weight.qmd
           - SURVEY/survey_benzecris.qmd
       - section: "情報機器"
