feat: FaviconやTwitter Cardsを追加

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,11 @@ project:
 
 website:
   title: "StudyNotes"
+  favicon: image/bookcover.png
+  twitter-card: true
+  site-url: https://kawa5902.github.io/StudyNote
+  google-analytics: "G-BDJN77QH1T"
+
   navbar:
     left:
       - text: "Home"
