fix: トラッキングコードを修正

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ website:
   favicon: image/bookcover.png
   twitter-card: true
   site-url: https://kawa5902.github.io/StudyNote
-  google-analytics: "G-BDJN77QH1T"
+  google-analytics: "G-0196R73LRX"
 
   navbar:
     left:
